--- a/example.html
+++ b/example.html
@@ -21,7 +21,7 @@
         </div>
         <div style="display: flex; justify-content: space-around;">
             <div style="display: flex; flex-direction: column;">
-                <div style="display: flex;">
+                <div style="display: flex; text-align: center;">
                     <div>
                         <h6>P1 Name</h6>
                         <input type="text" id="txtName">
@@ -37,7 +37,7 @@
                 </div>
             </div>
             <div style="display: flex; flex-direction: column;">
-                <div style="display: flex;">
+                <div style="display: flex; text-align: center;">
                     <div>
                         <h6>P2 Name</h6>
                         <input type="text" id="txtName2">
@@ -54,7 +54,10 @@
             </div>
         </div>
         <div style="text-align: center;">
-            <h1>Made by CRUZ JAYPE 123</h1>
+            <h1>Made by :</h1>
+        </div>
+         <div style="text-align: center;">
+            <h1>CRUZ JAYPE </h1>
         </div>
     </div>
 </body>
